docs: 문서를 "채팅 붕괴 5단계" 중심으로 재구성
문제가 md 가 많은 게 아니라 결론이 없는 것이었다. 진입점을 만들고
계획서를 하나의 서사로 다시 짰다.

## 진입점 신설

docs/README.md - 결론부터 나오는 지도.
언어를 안 바꾸는 이유, 저수준을 설명으로 증명하는 이유,
저수준 소재가 Spring 기본값 안에 있었다는 것을 맨 위에 두고
나머지 문서를 링크했다. 마지막에 "검토했지만 쓰지 않은 것" 표를 뒀다.

## 계획서를 붕괴 5단계 중심으로

01-realtime-chat-and-hls.md -> 01-chat-breaking-points.md

문서 제목이 곧 문제 정의가 됐다.

  "채팅방 인원이 늘면 어디서부터 무너지는가"

그리고 5단계를 문서 맨 앞에 올렸다.

  1 아웃바운드 스레드 고갈  <- "인원"이 아니라 "느린 클라 수"에 걸림
  2 fan-out CPU            <- 여기서 비로소 인원이 변수
  3 무한 큐 -> 힙 OOM
  4 단일 인스턴스 한계
  5 Redis Pub/Sub 한계

핵심은 1이 인원과 무관하다는 것이다. 다들 "동시접속 몇 명까지"를 재는데
실제로 먼저 죽는 건 "느린 클라이언트 몇 명"이다. 이걸 수치로 보이면
질문 자체를 바로잡는 것이라 더 강하다.

Phase 를 붕괴 단계에 매핑했다. 순서가 다른 이유(3을 먼저)도 적었다 -
재현이 가장 쉽고 여기서 세운 계측이 나머지에 그대로 쓰인다.

그리고 5단계가 예측일 뿐이라는 것을 명시하고 검증 후보 5개를 나열했다.
측정 결과가 예측과 다르면 그것 자체가 결과다.

## HLS 를 선택 작업으로 분리

02-hls-optional.md - 채팅 5단계를 끝낸 뒤 시간이 남으면 하는 것.
왜 후순위인지(Egress 인프라 세팅에 하루~1.5일이 먼저 날아감),
그래도 하는 이유(SBS 우대사항에 명시), 최소 범위 3가지를 앞에 적었다.